--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.google.zxing:core:3.1.0'
+    compile("net.glxn.qrgen:android:2.0")
+    compile 'de.greenrobot:eventbus:2.4.0'
 }
