--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "org.lrhsd.storm.user16"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 2
-        versionName "2.0"
+        versionCode 5
+        versionName "2.3"
     }
     buildTypes {
         release {
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.google.zxing:core:3.1.0'
     compile 'net.glxn.qrgen:android:2.0'
     compile 'de.greenrobot:eventbus:2.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
