--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:largeHeap="true">
-        <activity android:name=".MainActivity"
-            android:hardwareAccelerated="false" >
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".MainActivity"
+            android:hardwareAccelerated="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +22,8 @@
             android:name=".MatchActivity"
             android:label="@string/title_activity_match"
             android:theme="@style/AppTheme" />
-        <activity android:name=".QrActivity"></activity>
+        <activity android:name=".QrActivity" />
+        <activity android:name=".DefenseActivity"></activity>
     </application>
 
 </manifest>
